[gd_scene load_steps=2 format=3 uid="uid://d0es3xwgpjd6q"]

[ext_resource type="Script" path="res://scripts/script_scenes_cartes/InvestmentCard.gd" id="1_1sywv"]

[node name="Carte" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_1sywv")

[node name="TextureRect" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CostLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="InvestorsLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="RiskLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="GainLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
